// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid : Row should render as expected in its default state 1`] = `
<ContextProvider
  value={
    Object {
      "children": <Row
        allowMismatchedHeights={false}
        className=""
      >
        <p>
          Hello World
        </p>
      </Row>,
      "columnNumber": 12,
      "gridMaxWidth": 1920,
      "gutterWidth": 20,
      "mobileBreakpoint": 600,
    }
  }
>
  <Row
    allowMismatchedHeights={false}
    className=""
  >
    <p>
      Hello World
    </p>
  </Row>
</ContextProvider>
`;

exports[`Grid : Row should render as expected in its default state 2`] = `
<Row
  allowMismatchedHeights={false}
  className=""
>
  <p>
    Hello World
  </p>
</Row>
`;

exports[`Grid : Row should render with display:block when "allowMismatchedHeights" is TRUE 1`] = `
<ContextProvider
  value={
    Object {
      "allowMismatchedHeights": true,
      "children": <Row
        allowMismatchedHeights={false}
        className=""
      >
        <p>
          Hello World
        </p>
      </Row>,
      "columnNumber": 12,
      "gridMaxWidth": 1920,
      "gutterWidth": 20,
      "mobileBreakpoint": 600,
    }
  }
>
  <Row
    allowMismatchedHeights={false}
    className=""
  >
    <p>
      Hello World
    </p>
  </Row>
</ContextProvider>
`;

exports[`Grid : Row should render with display:block when "allowMismatchedHeights" is TRUE 2`] = `
<Row
  allowMismatchedHeights={false}
  className=""
>
  <p>
    Hello World
  </p>
</Row>
`;

exports[`Grid : Row should render with display:flex (on non-mobile screens) when "allowMismatchedHeights" is explicitly FALSE 1`] = `
<ContextProvider
  value={
    Object {
      "allowMismatchedHeights": false,
      "children": <Row
        allowMismatchedHeights={false}
        className=""
      >
        <p>
          Hello World
        </p>
      </Row>,
      "columnNumber": 12,
      "gridMaxWidth": 1920,
      "gutterWidth": 20,
      "mobileBreakpoint": 600,
    }
  }
>
  <Row
    allowMismatchedHeights={false}
    className=""
  >
    <p>
      Hello World
    </p>
  </Row>
</ContextProvider>
`;

exports[`Grid : Row should render with display:flex (on non-mobile screens) when "allowMismatchedHeights" is explicitly FALSE 2`] = `
<Row
  allowMismatchedHeights={false}
  className=""
>
  <p>
    Hello World
  </p>
</Row>
`;
